# jiance2.0

./: .dockerignore  .gitignore  .prettierrc  Dockerfile  REFACTOR_PROMPT.md  eslint.config.js  index.html  package-lock.json  package.json  readme.md  vite.config.ts  vitest.config.ts
backend/: alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8595a3a51bd4_initial.py  a1b2c3d4e5f6_add_test_item_configs.py  b2c3d4e5f6a7_add_material_spec_to_photos.py  c3d4e5f6a7b8_add_sample_count_aggregation.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  inspection.py  statistics.py
backend/app/core/: config.py
backend/app/db/: base.py
backend/app/models/: __init__.py  photo.py  test_item_config.py
backend/app/schemas/: config.py  inspection.py  photo.py
backend/app/services/: config_cache.py  data_cache.py  ocr.py  report_generator.py  storage.py  table_parser.py
backend/app/services/extractors/: __init__.py  aggregation.py  base.py  single_value.py  table_avg.py  table_column_row.py  table_id_rows.py  table_pressure.py  table_row_column.py
backend/data/: image_descriptions.json  test_item_configs.json
backend/scripts/: import_configs.py
backend/tests/: test_extractors.py
docs/: ocr功能规划.md  需求文档.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: config_data.sql  extractAllData.cjs  extractEquipment.cjs  extractReportTemplates.cjs  extract_descriptions.ps1  extract_final.ps1  fetchHolidays.cjs  gen_config_sql.ps1  migration.sql  recalcTimeliness.js  (+3 more)
(+68 files in other folders)
