[project]
name = "inspection-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.115.0",
    "uvicorn[standard]==0.32.0",
    "httpx==0.27.2",
    "python-multipart==0.0.12",
    "pydantic-settings==2.6.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncmy==0.2.10",
    "alembic==1.13.3",
    "cryptography>=49.0.0",
]
